--- a/views/add-to-cart.ejs
+++ b/views/add-to-cart.ejs
@@ -5,10 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ultra&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Oriya&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/css/add-to-cart.css">
 </head>
 <body>
     <h1>
-        Added to Cart
+        The item has been added <br>to the cart.
     </h1>
     <a href="/menu">Go to Menu</a>
 </body>
