--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ultra&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Oriya&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/css/checkout.css">
+    <title>Checkout</title>
 </head>
 <body>
     <h1>Order Placed and will be delivered shortly.</h1>
